pass by Fabrizio

--- a/deviant.bib
+++ b/deviant.bib
@@ -15,11 +15,31 @@
   pages     = {1374--1382},
   publisher = {{IEEE}},
   year      = {2015},
-  IGNORE_url       = {https://doi.org/10.1109/SSCI.2015.196},
-  doi       = {10.1109/SSCI.2015.196},
-  timestamp = {Wed, 16 Oct 2019 14:14:56 +0200},
-  biburl    = {https://dblp.org/rec/conf/ssci/DeboisS15.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/is/MaggiCFK18,
+  author    = {Fabrizio Maria Maggi and
+               Claudio Di Ciccio and
+               Chiara Di Francescomarino and
+               Taavi Kala},
+  title     = {Parallel algorithms for the automated discovery of declarative process
+               models},
+  journal   = {Inf. Syst.},
+  volume    = {74},
+  number    = {Part},
+  pages     = {136--152},
+  year      = {2018},
+}
+
+@article{DBLP:journals/is/CiccioMM16,
+  author    = {Claudio {Di Ciccio} and
+               Fabrizio Maria Maggi and
+               Jan Mendling},
+  title     = {Efficient discovery of Target-Branched Declare constraints},
+  journal   = {Inf. Syst.},
+  volume    = {56},
+  pages     = {258--283},
+  year      = {2016},
 }
 
 @inproceedings{DBLP:conf/aaai/BrewkaD0S15,
@@ -33,7 +53,7 @@
 
 @article{deviant-arxiv,
   author    = {Federico Chesani and
-               Chiara Di Francescomarino and
+               Chiara {Di Francescomarino} and
                Chiara Ghidini and
                Daniela Loreti and
                Fabrizio Maria Maggi and
@@ -54,7 +74,7 @@
 
 @article{deviant-tkde,
   author    = {Federico Chesani and
-               Chiara Di Francescomarino and
+               Chiara {Di Francescomarino} and
                Chiara Ghidini and
                Daniela Loreti and
                Fabrizio Maria Maggi and
@@ -62,7 +82,7 @@
                Marco Montali and
                Sergio Tessaris},
   title     = {Process discovery on deviant traces and other stranger things},
-  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  journal   = {IEEE Trans. on Knowledge and Data Engineering},
   year      = {2021},
   note = {Under review}
 }
@@ -77,17 +97,10 @@
                Manfred Reichert},
   title     = {Weighing the Pros and Cons: Process Discovery with Negative Examples},
   booktitle = {Business Process Management - 19th International Conference, {BPM}
-               2021, Rome, Italy, September 06-10, 2021, Proceedings},
-  series    = {Lecture Notes in Computer Science},
+               2021},
   volume    = {12875},
   pages     = {47--64},
-  publisher = {Springer},
   year      = {2021},
-  IGNORE_url       = {https://doi.org/10.1007/978-3-030-85469-0\_6},
-  doi       = {10.1007/978-3-030-85469-0\_6},
-  timestamp = {Thu, 02 Sep 2021 17:53:02 +0200},
-  biburl    = {https://dblp.org/rec/conf/bpm/SlaatsDB21.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 
@@ -282,7 +295,6 @@
 	Booktitle = {Business Process Management},
 	Date-Added = {2020-09-17 15:26:19 +0200},
 	Date-Modified = {2020-09-17 15:26:43 +0200},
-	Editor = {Alonso, Gustavo and Dadam, Peter and Rosemann, Michael},
 	Isbn = {978-3-540-75183-0},
 	Pages = {344--359},
 	Publisher = {Springer Berlin Heidelberg},
@@ -316,7 +328,7 @@
 	Pages = {60--75},
 	Publisher = {Springer},
 	Series = {Lecture Notes in Business Information Processing},
-	Title = {XES, XESame, and ProM 6},
+	Title = {XES, XESame, and {ProM} 6},
 	Volume = {72},
 	Year = {2010}}
 
@@ -381,6 +393,55 @@
 	Volume = {82},
 	Year = {2018}}
 
+@inproceedings{DBLP:conf/caise/MaggiBA13,
+  author    = {Fabrizio Maria Maggi and
+               R. P. Jagadeesh Chandra Bose and
+               Wil M. P. van der Aalst},
+  title     = {A Knowledge-Based Integrated Approach for Discovering and Repairing
+               Declare Maps},
+  booktitle = {Advanced Information Systems Engineering - 25th International Conference,
+               CAiSE 2013, Valencia, Spain, June 17-21, 2013. Proceedings},
+  pages     = {433--448},
+  year      = {2013},
+}
+
+@article{DBLP:journals/corr/abs-2111-12454,
+  author    = {Giacomo Bergami and
+               Chiara {Di Francescomarino} and
+               Chiara Ghidini and
+               Fabrizio Maria Maggi and
+               Joonas Puura},
+  title     = {Exploring Business Process Deviance with Sequential and Declarative
+               Patterns},
+  journal   = {CoRR},
+  volume    = {abs/2111.12454},
+  year      = {2021},
+}
+
+@inproceedings{DBLP:conf/edoc/PesicSA07,
+  author    = {Maja Pesic and
+               Helen Schonenberg and
+               Wil M. P. van der Aalst},
+  title     = {{DECLARE:} Full Support for Loosely-Structured Processes},
+  booktitle = {11th {IEEE} International Enterprise Distributed Object Computing
+               Conference {(EDOC} 2007)},
+  pages     = {287--300},
+  publisher = {{IEEE} Computer Society},
+  year      = {2007},
+ }
+ 
+@article{DBLP:journals/kbs/TaymouriRDM21,
+  author    = {Farbod Taymouri and
+               Marcello {La Rosa} and
+               Marlon Dumas and
+               Fabrizio Maria Maggi},
+  title     = {Business process variant analysis: Survey and classification},
+  journal   = {Knowl. Based Syst.},
+  volume    = {211},
+  pages     = {106557},
+  year      = {2021},
+}
+
 @article{2016-Bernardi,
 	Author = {Mario Luca Bernardi and Marta Cimitile and Chiara {Di Francescomarino} and Fabrizio Maria Maggi},
 	Journal = {Inf. Syst.},
@@ -428,8 +489,6 @@
 	Author = {Suriadi Suriadi and Moe Thandar Wynn and Chun Ouyang and Arthur H. M. ter Hofstede and Nienke J. van Dijk},
 	Booktitle = {CAiSE},
 	Pages = {449--464},
-	Publisher = {Springer},
-	Series = {Lecture Notes in Computer Science},
 	Title = {Understanding Process Behaviours in a Large Insurance Company in Australia: {A} Case Study},
 	Volume = {7908},
 	Year = {2013}}
@@ -455,7 +514,7 @@
 	Year = {2014}}
 
 @article{2016-Nguyen,
-	Author = {Hoang Nguyen and Marlon Dumas and Marcello La Rosa and Fabrizio Maria Maggi and Suriadi Suriadi},
+	Author = {Hoang Nguyen and Marlon Dumas and Marcello {La Rosa} and Fabrizio Maria Maggi and Suriadi Suriadi},
 	Journal = {CoRR},
 	Title = {Business Process Deviance Mining: Review and Evaluation},
 	Volume = {abs/1608.08252},
@@ -656,7 +715,7 @@
 	Year = {1967}}
 
 @article{2017-DiCiccio,
-	Author = {Claudio Di Ciccio and Fabrizio Maria Maggi and Marco Montali and Jan Mendling},
+	Author = {Claudio {Di Ciccio} and Fabrizio Maria Maggi and Marco Montali and Jan Mendling},
 	Journal = {Inf. Syst.},
 	Pages = {425--446},
 	Title = {Resolving inconsistencies and redundancies in declarative process models},
@@ -664,12 +723,12 @@
 	Year = {2017}}
 
 @inproceedings{2015-DiCiccio,
-	Author = {Claudio Di Ciccio and Mitchel H. M. Schouten and Massimiliano de Leoni and Jan Mendling},
+	Author = {Claudio {Di Ciccio} and Mitchel H. M. Schouten and Massimiliano {de Leoni} and Jan Mendling},
 	Booktitle = {{BPM} (Demos)},
 	Pages = {60--64},
 	Publisher = {CEUR-WS.org},
 	Series = {{CEUR} Workshop Proceedings},
-	Title = {Declarative Process Discovery with MINERful in ProM},
+	Title = {Declarative Process Discovery with MINERful in {ProM}},
 	Volume = {1418},
 	Year = {2015}}
 
@@ -911,12 +970,8 @@ publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
 volume = {54},
 number = {12},
-issn = {0001-0782},
-url = {https://doi-org.libproxy.unibz.it/10.1145/2043174.2043195},
-doi = {10.1145/2043174.2043195},
 abstract = {The motivation and key concepts behind answer set programming---a promising approach to declarative problem solving.},
 journal = {Commun. ACM},
-month = {dec},
 pages = {92–103},
 numpages = {12}
 }
@@ -924,11 +979,10 @@ numpages = {12}
 @article{clingo,
   title     = {Multi-shot ASP solving with clingo},
   volume    = {19},
-  doi       = {10.1017/S1471068418000054},
   number    = {1},
-  journal   = {Theory and Practice of Logic Programming},
+  journal   = {Theory and Practice of Logic Progr.},
   publisher = {Cambridge University Press},
-  author    = {GEBSER, MARTIN and KAMINSKI, ROLAND and KAUFMANN, BENJAMIN and SCHAUB, TORSTEN},
+  author    = {Gebser, MARTIN and Kaminski, ROLAND and Kauffman, BENJAMIN and Schaub, TORSTEN},
   year      = {2019},
   pages     = {27–82}
 }
