--- a/example.tex
+++ b/example.tex
@@ -1,56 +1,77 @@
 %!TEX root = ./main.tex
 
-% \section{Motivating Examples\ldots\ or ``which type or preferences we would like to see''}
-\section{Why preferences over discovered models?}
+\section{The modeling language}
+\label{sec:prel}
+The discovery approach we introduce in this paper is based on \declare. \declare is a language for describing declarative process models first introduced
+in~\cite{DBLP:conf/edoc/PesicSA07}. A \declare model consists of a set of constraints applied to
+(atomic) activities. Constraints are, in turn, based on templates. Templates are
+abstract parameterized patterns and constraints are their concrete
+instantiations on real activities.
+Templates have a graphical representation and their semantics can be formalized using different logics, the main one being  LTL for finite traces, making them verifiable and executable.
+Each constraint inherits the graphical representation and semantics from its
+template.
+The major benefit of using templates is that analysts do not have to be aware of
+the underlying logic-based formalization to understand the models. They work
+with abstract representations of templates, while the underlying formulas
+remain hidden. Table~\ref{table:declare} summarizes the main \declare constructs used in this paper. The reader can refer to \cite{DBLP:conf/edoc/PesicSA07} for a full description
+of the language.
+
+\input{table_declare}
+
+
+
+\section{Why preferences on the discovered models?}
 \label{sec:example}
 
 
-Users look for discovering models for a variety of reasons. A common one is related to the need of having a description/explanation of the process. Other reasons might be, for example, the need for detecting process deviations or process drifts. Or, as in the case with \nd, users might be interested to understand, from a model viewpoint, what distinguishes one set of traces from another. 
+Users look for discovering models for a variety of reasons. A common one is related to the need of having a description/explanation of a process. Other reasons might be, for example, the need for detecting process deviations or process drifts. Or, as in the case of \nd, users might be interested in understanding, from a model viewpoint, what distinguishes one set of traces from another. 
 
-Depending on the discovery technique and the target language, many alternative models might describe the same process. For example, both BPMN and \declare allow us to describe the same process using different constructs or templates. However, not all the discovered models are equivalent\footnote{Roughly speaking, two models are \emph{equivalent} if they accept and reject the same traces. Such a notion of equivalence hints to the possibility that given two models $\mathsf{M_1}$ and $\mathsf{M_2}$, opting for the former or the latter will not change which traces will be accepted or rejected.}
-, and even when they are equivalent, there could be too many models to choose from.
+Depending on the discovery technique and the target language, many alternative models might describe the same process. For example, both BPMN and \declare allow us to describe the same process using different constructs or templates. However, not all the discovered models are equivalent\footnote{Roughly speaking, two models are \emph{equivalent} if they accept and reject the same traces. Such a notion of equivalence hints to the possibility that given two models $M_1$ and $M_2$, %$\mathsf{M_1}$ and $\mathsf{M_2}$,
+opting for the former or the latter will not change which traces will be accepted or rejected.}, and even when they are equivalent, there could be too many models to choose from.
 
-Hence, the availability of many models might, in turn, hinder the usefulness of the discovery approach: the user will need a criterion for selecting few models among the many discovered.
+Since the availability of many models might, in turn, hinder the usefulness of the discovery approach, the user would need a criterion for selecting few models among the many discovered.
 %
-Preferences over discovered models are then a way for supporting the user's needs. In particular, we envisage three different types of preferences: preferences over single activities, preferences over single model templates, and possibly combinations of both.
+Preferences on the discovered models represent then a way for prioritizing the discovered models based on the user's needs. In particular, we envisage three different types of preferences: preferences over activities, preferences over templates, and a combination of both.
 
 
 
-\subsection{Preferences over the process activities}
+\subsection{Preferences over process activities}
 \label{subsec:prefOverActivities}
 
-A first type of preference on discovered models is strictly related to the application domain. We can reasonably imagine that, depending on the user's goals, models that focus more on certain activities might be preferable.
+A first type of preferences on the discovered models is strictly related to the application domain. We can reasonably imagine that, depending on the user's goals, models that focus more on certain activities might be preferable.
 
 \begin{example}
 \label{ex:prefOverActivities}
-Let us consider the quite common ``loan scenario'', where a bank receives a request for a loan, evaluates it, and provides an answer. Let us assume that process instances have been classified into two sets, for example using some unexplainable machine learning method. The bank employee will look then for a model that helps her to understand differences between the two sets. Of course, the employee will not directly look into the logs, that for the easy of understanding we can suppose to be as follows:
+Let us consider the quite common ``loan scenario'', where a bank receives a request for a loan, evaluates it, and provides an answer. Let us assume that process instances have been classified into two sets, for example including successful and unsuccessful applications. The bank employee will look then for a model that helps her to understand the differences between the two sets. Of course, the employee will not directly look into the logs, which, for simplicity, we can suppose to be as follows:
 % Let us consider the following, fictitious example, where both the positive and the negative sets contain only one trace each:
 %
 \begin{align*}
-P & = \{\ (\mathsf{loanRequest}, \mathsf{requestEval}, \mathsf{notifyOutcome})\ \} \\
-N & = \{\ (\mathsf{requestEval}, \mathsf{loanRequest})\ \}
+%P
+L^{+}& = \{\ \langle \mathsf{loanRequest}, \mathsf{requestEval}, \mathsf{notifyOutcome} \rangle \ \} \\
+%N
+L^- & = \{\ \langle \mathsf{requestEval}, \mathsf{loanRequest} \rangle \ \}
 \end{align*}
 %
-where the positive example set $P$ contains only one trace (\btext{composed of}
+where the positive example set $L^+$ %$P$
+contains only one trace (\btext{composed of}
 %lasting
- three activities), and the negative example set $N$ contains a single trace as well.
+ three activities), and the negative example set $L^-$ %$N$
+ contains a single trace as well.
 
-\noindent \btext{If the employee is an } 
-%An
- employee working in the marketing department\btext{, she could have } 
-%has
- in mind the bank slogan ``we always answer our customers''. Hence, she would be surely interested in the \textsf{notifyOutcome} activity. She would specify such preference, and the discovery algorithm would reply her with two models both involving the preferred activity\footnote{Other models exist, of course, but for the sake of clarity we mention only these models.}:
+\noindent \btext{If the employee is an }employee working in the marketing department\btext{, she could have }in mind the bank slogan ``we always answer our customers''. Hence, she would be surely interested in the \textsf{notifyOutcome} activity. By specifying such preference, the discovery algorithm would return two models both involving the preferred activity\footnote{Other models exist, of course, but, for the sake of clarity, we only mention two of them.}:
 %
 \begin{align*}
-\mathsf{M_1} & = \{ \mathsf{response(requestEval, notifyOutcome)}\} \\
-\mathsf{M_2} & = \{ \mathsf{existence(notifyOutcome)}\}
+%\mathsf{M_1} & = \{ \mathsf{response(requestEval, notifyOutcome)}\} \\
+%\mathsf{M_2} & = \{ \mathsf{existence(notifyOutcome)}\}
+M_1 & = \{ \mathsf{response(requestEval, notifyOutcome)}\} \\
+M_2 & = \{ \mathsf{existence(notifyOutcome)}\}
 \end{align*}
 %
 \qed
 %
 \end{example}
 
-Generally speaking, being able to specify a preference for models that refer to specific activities allows the user to answer the question \emph{``Is it possible to discriminate between two sets of traces by looking at certain activities?''}. The discovery process is then domain-driven: many models describe the process, but those ones that focus on certain domain aspects should be \btext{returned.} %searched.
+Generally speaking, being able to specify a preference for models that refer to specific activities allows users to answer the question \emph{``Is it possible to discriminate between two sets of traces by looking at certain activities?''}. The discovery process becomes, in this way, domain-driven: many models describe the process, but only those ones that focus on certain domain aspects should be \btext{returned.} %searched.
 
 
 
@@ -58,7 +79,7 @@ Generally speaking, being able to specify a preference for models that refer to 
 \subsection{Preferences over Declare templates}
 \label{subsec:prefOverTemplates}
 
-Process description languages like, e.g., BPMN and \declare, are quite rich in their expressiveness, and allow us to describe a process using different constructs or templates. This leads to the availability of alternative models that could be equivalent or not. Unfortunately, even when restricting our attention to equivalent models only, it is easy to see that they might not \btext{convey the information to the users in exactly the same way.}
+Process description languages like, e.g., BPMN and \declare, are quite rich in their expressiveness, and allow us to describe a process using different constructs or templates. This leads to the availability of alternative models that could be equivalent or not. Unfortunately, even when restricting our attention to equivalent models only, it is easy to see that they might not \btext{convey the information in exactly the same way to users.}
 % carry the exact meaning.
 
 % One of the reasons why many alternative models can be discovered starting from a log resides in the richness of the adopted process description language. For example, both BPMN and Declare allow to describe the same process using different constructs or templates.  However, not all the discovered models are equivalent, and even when they are equivalent, they might not carry the exact meaning. Roughly speaking, two models are \emph{equivalent} if they accept and reject the same traces. hints to the possibility that given two models $\mathsf{M_1}$ and $\mathsf{M_2}$, opting for the former or the latter will not change which traces will be accepted or rejected (by definition).
@@ -73,25 +94,37 @@ Let us assume %suppose
  to have the following log, whose traces have been classified into two sets:
 %
 \begin{align*}
-P & = \{\ (\mathsf{a}, \mathsf{b}),\ (\mathsf{b}, \mathsf{a})\ \} \\
-N & = \{\ (\mathsf{a}),\ (\mathsf{b})\ \}
+%P
+L^+ & = \{\ \langle \mathsf{a}, \mathsf{b}\rangle,\ \langle \mathsf{b}, \mathsf{a} \rangle \ \} \\
+%N
+L^- & = \{\ \langle \mathsf{a}\rangle,\ \langle \mathsf{b} \rangle \ \}
 \end{align*}
 %
-Alternative models allowing us to \btext{represent the traces that belong to the set $P$ and exclude the ones that belong to the set $N$ are:}%distinguish traces belonging to the two sets are:
+Alternative models allowing us to \btext{represent the traces that belong to $L^+$ %$P$
+and exclude the ones that belong to $L^-$ %$N$
+are:}%distinguish traces belonging to the two sets are:
 \begin{align*}
-\mathsf{M_1} & = \{ \mathsf{existence(a),existence(b)}\} \\
-\mathsf{M_2} & = \{ \mathsf{existence(a), responded\_existence(a, b)}\} \\
-\mathsf{M_3} & = \{ \mathsf{existence(b), responded\_existence(b, a)}\} \\
-\mathsf{M_4} & = \{ \mathsf{existence(a), co\_existence(a, b)}\} \\
-\mathsf{M_5} & = \{ \mathsf{existence(b), co\_existence(a, b)}\}
+%\mathsf{M_1} & = \{ \mathsf{existence(a),existence(b)}\} \\
+%\mathsf{M_2} & = \{ \mathsf{existence(a), responded\_existence(a, b)}\} \\
+%\mathsf{M_3} & = \{ \mathsf{existence(b), responded\_existence(b, a)}\} \\
+%\mathsf{M_4} & = \{ \mathsf{existence(a), co\_existence(a, b)}\} \\
+%\mathsf{M_5} & = \{ \mathsf{existence(b), co\_existence(a, b)}\}
+M_1 & = \{ \mathsf{existence(a),existence(b)}\} \\
+M_2 & = \{ \mathsf{existence(a), responded\_existence(a, b)}\} \\
+M_3 & = \{ \mathsf{existence(b), responded\_existence(b, a)}\} \\
+M_4 & = \{ \mathsf{existence(a), co\_existence(a, b)}\} \\
+M_5 & = \{ \mathsf{existence(b), co\_existence(a, b)}\}
 \end{align*}
 %
 
-From \btext{a}%the
- logical viewpoint, models $\mathsf{M_1}$--$\mathsf{M_5}$ are equivalent. However, models $\mathsf{M_2}$--$\mathsf{M_5}$ suggest that \btext{what distinguishes the traces in $P$ from the traces in $N$ } 
+From \btext{a} %the
+ logical viewpoint, models $M_1$--$M_5$ %$\mathsf{M_1}$--$\mathsf{M_5}$
+ are equivalent. However, models  $M_2$--$M_5$ %$\mathsf{M_2}$--$\mathsf{M_5}$
+ suggest that \btext{what distinguishes the traces in $L^+$ from the traces in $L^-$ } 
 %there
- is a relation between \btext{the} activities \textsf{a} and \textsf{b}: \btext{these models contain a binary constraint, whose purpose is indeed to highlight a relation between these two activities. }%indeed, the models contain a binary constraint, whose purpose is indeed to highlight relations between activities.
- Model $\mathsf{M_1}$, instead, does not tell us anything about possible links between activities \textsf{a} and \textsf{b}, and a user might conclude that no relation exists between \btext{them.}%the two activities.
+ is a relation between activities \textsf{a} and \textsf{b}: \btext{indeed, these models contain a binary constraint, whose purpose is to highlight a relation between these two activities. }%indeed, the models contain a binary constraint, whose purpose is indeed to highlight relations between activities.
+ Model $M_1$, %$\mathsf{M_1}$, 
+ instead, does not tell us anything about possible links between activities \textsf{a} and \textsf{b}, and a user might conclude that no relation exists between \btext{them.}%the two activities.
 \qed
 \end{example}
 
@@ -102,33 +135,38 @@ We can imagine scenarios where users prefer models containing the minimum number
  situations where the user is actively looking for %new %perche` new?
  relations. In both cases, preferences \btext{on} 
 %about
- which \btext{\declare} templates should be preferably included into a model would allow the user to adapt the discovery process to her needs.
+ which \btext{\declare} templates should be preferably included into a model would allow the user to tailor the discovery process to her needs.
 
-Notice also that Example \ref{ex:unaryVsBinary} might mislead the reader to think that preferences over templates is a matter of unary vs. binary constraints only. This is not true, since equivalence is a logic property that stems from the interplay between all the constraints within each single model. Models with many binary constraints might be proved to be equivalent. Let us consider the following example:
+Notice also that Example \ref{ex:unaryVsBinary} might mislead the reader to think that preferences over templates is a matter of unary vs. binary constraints only. This is not the case, since equivalence is a logic property that stems from the interplay between all the constraints within each single model. Models with many binary constraints might be proved to be equivalent, as shown in the following example.
 
 \begin{example}
 \label{ex:alternateVsResponseEquiv}
 Let us consider the following log:
 \begin{align*}
-P & = \{\ (\mathsf{a}, \mathsf{b}),\ (\mathsf{a}, \mathsf{b}, \mathsf{c}),(\mathsf{a}, \mathsf{c}, \mathsf{b})\ \} \\
-N & = \{\ (\mathsf{a}), (\mathsf{a}, \mathsf{c})\ \}
+%P
+L^+& = \{\ \langle \mathsf{a}, \mathsf{b} \rangle,\ \langle \mathsf{a}, \mathsf{b}, \mathsf{c} \rangle, \langle \mathsf{a}, \mathsf{c}, \mathsf{b} \rangle\ \} \\
+%N
+L^-& = \{\ \langle \mathsf{a} \rangle, \langle \mathsf{a}, \mathsf{c} \rangle \ \}
 \end{align*}
 %
-Two alternative models that accept the positive examples and rejects the negative ones are:
+Two alternative models that accept the positive examples and reject the negative ones are:
 \begin{align*}
-\mathsf{M_1} & = \{ \mathsf{absence2(a),response(a,b)}\} \\
-\mathsf{M_2} & = \{ \mathsf{absence2(a),alternate\_response(a, b)}\}
+%\mathsf{M_1} & = \{ \mathsf{absence2(a),response(a,b)}\} \\
+%\mathsf{M_2} & = \{ \mathsf{absence2(a),alternate\_response(a, b)}\}
+M_1 & = \{ \mathsf{absence2(a),response(a,b)}\} \\
+M_2 & = \{ \mathsf{absence2(a),alternate\_response(a, b)}\}
 \end{align*}
-Models $\mathsf{M_1}$ and $\mathsf{M_2}$ are equivalent due to the interplay of the constraint \textsf{absence2} with the the \textsf{response} and the \textsf{alternate\_response} constraints: roughly speaking, being activity \textsf{a} forbidden to appear more than once, the effects of the stricter constraint \textsf{alternate\_reponse} are nullified.
+Models $M_1$ and $M_2$  %$\mathsf{M_1}$ and $\mathsf{M_2}$
+are equivalent due to the interplay of the constraint \textsf{absence2} with the the \textsf{response} and the \textsf{alternate\_response} constraints: roughly speaking, being activity \textsf{a} forbidden to appear more than once, the effects of the stricter constraint \textsf{alternate\_reponse} are nullified.
 \qed
 \end{example}
 
 
 
 \paragraph{Case 2: Non-equivalent models.}
-\btext{Let us consider then the case where alternative non-equivalent models are discovered.}
+\btext{Let us consider now the case where alternative non-equivalent models are discovered.}
 %Let us consider then the more complex case where alternative models are discovered, and they are not equivalent.
- This happens because a log is usually a partial view of all the possible execution traces. Traces not appearing in the log might be classified differently by different models. Not-yet-seen traces are \emph{unknown} w.r.t. the classification, but different models would classify them in a different manner. Different models would \emph{shape the unknown} differently.
+This might happen because a log is usually a partial view of all the possible execution traces. Not-yet-seen traces are \emph{unknown} w.r.t. the classification, but different models could classify them in different manners. Different models would \emph{shape the unknown} differently.
 % How is it possible that a discovery algorithm outputs different models, all able to correctly discriminate between positive and negative examples, but such models being not equivalent?
 % The issue stems from the fact that a log is usually a partial view of all the possible execution traces. Traces not appearing in the log might be classified differently by different models. Not-yet-seen traces are \emph{unknown} w.r.t. the classification, but different models would classify them in a different manner. Different models would \emph{shape the unknown} differently.
 
@@ -136,72 +174,85 @@ Models $\mathsf{M_1}$ and $\mathsf{M_2}$ are equivalent due to the interplay of 
 \label{ex:unknownShapedDifferently}
 Let us consider the following log:
 \begin{align*}
-P & = \{\ (\mathsf{a}, \mathsf{b}),\ (\mathsf{b}, \mathsf{a})\ \} \\
-N & = \{\ (\mathsf{a})\ \}
+%P 
+L^+ & = \{\ \langle \mathsf{a}, \mathsf{b} \rangle,\ \langle \mathsf{b}, \mathsf{a} \rangle \ \} \\
+%N
+L^- & = \{\ \langle \mathsf{a} \rangle \ \}
 \end{align*}
 %
-Alternative models \btext{that accept the traces in $P$ and discard the ones in $N$ are:}
+Alternative models \btext{that accept the traces in $L^+$ and discard the ones in $L^-$ are:}
 %allowing to distinguish traces belonging to the two sets are:
 \begin{align*}
-\mathsf{M_1} & = \{ \mathsf{existence(a),existence(b)}\} \\
-\mathsf{M_2} & = \{ \mathsf{responded\_existence(a, b)}\}
+%\mathsf{M_1} & = \{ \mathsf{existence(a),existence(b)}\} \\
+%\mathsf{M_2} & = \{ \mathsf{responded\_existence(a, b)}\}
+M_1 & = \{ \mathsf{existence(a),existence(b)}\} \\
+M_2 & = \{ \mathsf{responded\_existence(a, b)}\}
 \end{align*}
 %
-Let us consider then the trace $\mathsf{(b)}$, that was not recorded in the log. Model $\mathsf{M_1}$ would reject it, whereas model $\mathsf{M_2}$ would accept it.
+Let us consider then the trace $\langle \mathsf{b} \rangle$, that was not recorded in the log. Model $M_1$ %$\mathsf{M_1}$
+would reject it, whereas model $M_2$ %$\mathsf{M_2}$
+would accept it.
 \qed
 \end{example}
 
-Example \ref{ex:unknownShapedDifferently} shows how traces not appearing in the log used for the discovery might be %then
- classified differently by the models. A preference elicitation mechanism would allow the user to decide how the not-yet-seen traces would be classified, in a restricting or in a broader way. Another example is the following:
+Example \ref{ex:unknownShapedDifferently} shows how traces not appearing in the log used for the discovery might be classified differently by the discovered models. A preference elicitation mechanism would allow the user to decide how the not-yet-seen traces would be classified, in a restricting or in a broader way. Another example is given below.
 
 \begin{example}
 \label{ex:alternateVsResponse}
 Let us consider the following log:
 \begin{align*}
-P & = \{\ (\mathsf{a}, \mathsf{b}),\ (\mathsf{a}, \mathsf{b}, \mathsf{c}),(\mathsf{a}, \mathsf{c}, \mathsf{b})\ \} \\
-N & = \{\ (\mathsf{a}), (\mathsf{a}, \mathsf{c})\ \}
+%P
+L^+ & = \{\ \langle \mathsf{a}, \mathsf{b} \rangle,\ \langle \mathsf{a}, \mathsf{b}, \mathsf{c} \rangle, \langle \mathsf{a}, \mathsf{c}, \mathsf{b} \rangle \ \} \\
+%N
+L^- & = \{\ \langle \mathsf{a} \rangle, \langle \mathsf{a}, \mathsf{c} \rangle \ \}
 \end{align*}
 %
-Two alternative models that accept the positive examples and rejects the negative ones are:
+Two non-equivalent models that accept the positive examples and reject the negative ones are:
 \begin{align*}
-\mathsf{M_1} & = \{ \mathsf{response(a,b)}\} \\
-\mathsf{M_2} & = \{ \mathsf{alternate\_response(a, b)}\} \tag*{$\square$}
+%\mathsf{M_1} & = \{ \mathsf{response(a,b)}\} \\
+%\mathsf{M_2} & = \{ \mathsf{alternate\_response(a, b)}\} \tag*{$\square$}
+M_1 & = \{ \mathsf{response(a,b)}\} \\
+M_2 & = \{ \mathsf{alternate\_response(a, b)}\} \tag*{$\square$}
 \end{align*}
 %\qed
 \end{example}
 
 %In Example \ref{ex:alternateVsResponse} both the models 
 \btext{Both models in Example~\ref{ex:alternateVsResponse} }
-suffice to classify a trace into one or the other class. However, model $\mathsf{M_2}$ is \emph{stricter}, since it accepts less traces and rejects more traces than $\mathsf{M_1}$. A user might express his preferences for stricter or more general models.
+suffice to classify a trace into one or the other class. However, model $M_2$ %$\mathsf{M_2}$
+is \emph{stricter}, since it accepts less traces and rejects more traces than $M_1$. %$\mathsf{M_1}$.
+A user might express her preference for stricter or more general models.
 % \btext{Esempio 4, ancora sul perchè preferrenze sui template: vincoli binari contro vincoli binari}
 
 
 \subsection{Preferences over both activities and templates}
 \label{sub:prefOverBoth}
 
-
-The third type of preference \btext{on} %over
- process models is a straightforward combination of the preference types introduced in Subsections \ref{subsec:prefOverActivities} and \ref{subsec:prefOverTemplates}. Domain-related knowledge would drive the attention to certain activities, and preferences \btext{on template types would allow focusing on certain relation types.}%between the template types would allow to focus on certain relation types.
+The third type of preferences \btext{on} the discovered models is a straightforward combination of the preference types introduced in Subsections \ref{subsec:prefOverActivities} and \ref{subsec:prefOverTemplates}. Domain-related knowledge would drive the attention to certain activities, and preferences \btext{over templates would allow focusing on certain relation types.}%between the template types would allow to focus on certain relation types.
 
 
 \begin{example}
 \label{ex:prefOverBoth}
-Let us consider again the ``loan scenario'' \btext{and the log described above:}%previously introduced, and the same log as well:
+Let us consider again the ``loan scenario'' \btext{and the log:}%previously introduced, and the same log as well:
 %
 \begin{align*}
-P & = \{\ (\mathsf{loanRequest}, \mathsf{requestEval}, \mathsf{notifyOutcome})\ \} \\
-N & = \{\ (\mathsf{requestEval}, \mathsf{loanRequest})\ \}
+%P
+L^+ & = \{\ \langle \mathsf{loanRequest}, \mathsf{requestEval}, \mathsf{notifyOutcome} \rangle \ \} \\
+%N
+L^- & = \{\ \langle \mathsf{requestEval}, \mathsf{loanRequest} \rangle \ \}
 \end{align*}
 %
 Let us \btext{consider} %assume
-now the viewpoint of an employee working in the internal auditing department. Given that the wrong execution order of certain activities might be a symptom of some fraud, the employee would like to focus the attention \btext{on} %to
-templates of type \textsf{response} and/or \textsf{precedence}, and in particular \btext{on} %to
+now the viewpoint of an employee working in the internal auditing department. Given that the wrong execution order of certain activities might be a symptom of some fraud, the employee would like to focus the attention \btext{over} %to
+templates of type \textsf{response} and/or \textsf{precedence}, and, in particular, \btext{over} %to
 those constraints involving the \textsf{requestEval} activity. The discovery algorithm would exploit such preference by looking for models with the elicited features, and would provide in output:
 %
 \begin{align*}
-\mathsf{M} & = \{ \mathsf{precedence(requestEval,loanRequest)}\} \tag*{$\square$}
+%\mathsf{M} & = \{ \mathsf{precedence(requestEval,loanRequest)}\}
+M & = \{ \mathsf{precedence(requestEval,loanRequest)}\}
+\tag*{$\square$}
 \end{align*}
 %\qed
 \end{example}
 
-Notice that Example \ref{ex:prefOverBoth} shares the exact same log as Example \ref{ex:prefOverActivities}. However, the output is completely different: the user preference is used to guide the search for a model, thus giving in output models that should be of greater interest for the user.
+Notice that Example \ref{ex:prefOverBoth} shares the exact same log as Example \ref{ex:prefOverActivities}. However, the output is completely different: the preferences are used, indeed, to guide the search for a model, which is of interest for the user.
