--- a/evaluation.tex
+++ b/evaluation.tex
@@ -14,29 +14,32 @@
 
 % \btext{@all? (in particolare chiara DF, FAbrizio, Marco e sergio per pensarla). Pensare alla valutazione. Ho recuperato i due dataset dei danesi (vedi git). Se volete si possono usare questi, pero' uno dei due log in realta' e' un insieme di 215 logs di cui loro hanno fatto la media. Forse io ne sceglierei due o tre (es Dreyers Foundation.xes + uno o due dei 215) e farei la valutazione su questi. Anche perche' piu' che valutazione e' far vedere cosa esce perche' nn mi e' chiaro come valutiamo n termini di metriche l'output.}
 
-In Section \ref{sec:example} we introduced the preference types through simple toy-like examples. The interested reader however might wonder about the usability and efficacy of our approach w.r.t. real-life cases. We explored the applicability of our approach to two real-life event logs, namely DREYERS (492 positive traces and 208 negative ones) and CERV (55 positive traces and 102 negatives traces). In both cases we were able to find ten models satisfying the given preferences in a computation time between 1 and 3 seconds, using a normally-equipped laptop.
+In Section \ref{sec:example}, we introduced the preference types through simple toy-like examples. The interested reader, however, might wonder about the usability and efficacy of our approach when applied to real-life cases. We explored the applicability of our approach \btext{using} %to
+two real-life event logs, namely DREYERS (492 positive traces and 208 negative ones) and CERV (55 positive traces and 102 negatives traces).\footnote{\btext{For reproducibility purposes the source code is available in~\cite{zenodo:experiments}, the DREYERS event log can be found in~\cite{DBLP:conf/ssci/DeboisS15,DBLP:conf/bpm/SlaatsDB21}, while the CERV event log is a proprietary dataset.}} In both cases, we were able to find ten models satisfying the given preferences in a computation time between 1 and 3 seconds, using a normally-equipped laptop.
 
 
 
 \subsection{The DREYERS log}
 \label{subsec:dreyers}
 
-The DREYERS log describes the Dreyer Foundation’s processes, regarding their support to legal and architectural projects, and it has been used in \cite{DBLP:conf/ssci/DeboisS15,DBLP:conf/bpm/SlaatsDB21}. Each application that aims to the Foundation's support goes through a pre-screen that can lead to an initial rejection. The remaining applications undergo a review, in which at least one of the reviewers must be a lawyer or an architect, depending on the application type. The review phase is followed by a board meeting, where applications to be supported are selected: in case, the application is funded.
+The DREYERS log describes the Dreyer Foundation’s processes pertaining to their support to legal and architectural projects, and it has been used in \cite{DBLP:conf/ssci/DeboisS15,DBLP:conf/bpm/SlaatsDB21}. Each application to request the Foundation's support goes through a pre-screen that can lead to an initial rejection. The remaining applications undergo a review, in which at least one of the reviewers must be a lawyer or an architect, depending on the application type. The review phase is followed by a board meeting, where applications to be supported are selected \btext{and eventually funded.} %\btext{The selected applications are then funded.}%: in case, the application is funded.
+Two sets of log traces are available \btext{in the dataset}: a positive one collecting executions that did not fail and a negative one representing executions that were reset due to a system failure. %process instances that execute properly have been labeled as the positive example set, while process instances that do not adhere to the proper execution path belong to the negative example set. %The labeling was already available, and we are not aware of the adopted criteria.
+%Two sets of log traces are available: process instances that do not go through the pre-screen belong to the negative example set, whereas the ones that execute till the end of the procedure have been labeled as positive.
 
-Two sets of log traces are available: process instances that execute properly have been labeled as the positive example set, while process instances that do not adhere to the proper execution path belong to the negative example set. The labeling was already available, and we are not aware of the adopted criteria.
-
-Hence, we plaid a sort of ``investigation game'', and explored the hypothesis that the type of application (architect- or lawyer- type) might affect the process outcome. More generally, one might be interested in knowing if there are any differences in models that explicitly mention one of the two possible types of application.
+Using this dataset, we played a sort of ``investigation game'', and explored the hypothesis that the type of application (architect- or lawyer- type) might affect the process outcome. More generally, one might be interested in knowing if there are any differences in models that explicitly mention one of the two possible types of application.
 %, so as to understand the possible variations in the process, depending on the legal or architectural context
 %%%To distinguish (traces referring to) the two types of applications, we resorted to focus on two activities peculiar of each application type, namely the “Lawyer Review” and the “Architect Review” activity.
-To this end, we specified a preference for models containing the activity \textsf{Lawyer Review}, and then a preference for the \textsf{Architect Review} activity.
+To this end, we first specified a preference for models containing activity \textsf{Lawyer Review}, and then a preference for models containing activity \textsf{Architect Review}.
 
-In both cases several models satisfying the preferences were found. However, the two sets of models are identical (except for the architect/lawyer activity), showing that the process is probably independent of the application domain, as expected from the process description.
-We report an example of a model obtained when specifying a preference for the \textsf{Architect Review} activity:
-
+In both cases, \btext{more than one model} %several models
+satisfying the preferences were found. However, the two sets of models are identical (except for the architect/lawyer activity), showing that the process is independent of the application domain.
+We report an example of a model obtained when specifying the preference for models containing activity \textsf{Architect Review}:
+%
 %l'ordine di restituzione è molto diverso e i primi restituiti sono quelli con l'azione in danese, quindi ne ho scelti due volutamente diversi... è meglio metterli uguali con solo l'azione architect/lawyer diversa?
-
+%
 \begin{align*}
-\mathsf{M_1} = \{ \ & \mathsf{ alternateresponse(Undo\ payment, First\ payout)} \\
+%\mathsf{M_1} = \{ \ & \mathsf{ alternateresponse(Undo\ payment, First\ payout)} \\
+M_1 = \{ \ & \mathsf{ alternateresponse(Undo\ payment, First\ payout)} \\
 & \mathsf{ chainprecedence(Fill\ out\ application, Initial\ Rejection)} \\
 & \mathsf{ choice(Round\ ends, Change\ phase\ to\ Abort)} \\
 & \mathsf{ notchainsuccession(Receive\ final\ report, First\ payout)} \\
@@ -50,13 +53,16 @@ We report an example of a model obtained when specifying a preference for the \t
 %%%For the models of the previous example we report the number of traces and paths violated by each constraint:
 
 %%%Model M1:\\
-\begin{table}
+\begin{table}[t!]
 \label{table:resultsModelM1}
+
 \begin{center}
 \begin{scriptsize}
+\scalebox{1}{
 \begin{tabular}{lcc}
+\toprule
 %\hline
-Constraint & Traces & Paths \\
+\textbf{Constraints} & \textbf{Traces \#} & \textbf{Variants \#} \\
 \hline
 alternateresponse(Undo payment, First payout) & 2 & 2\\
 %\hline
@@ -79,17 +85,20 @@ Traces not ruled out by the model & 3 & 2 \\
 Total & 208 & 30\\
 \hline
 \end{tabular}
+}
 \end{scriptsize}
 \end{center}
-\caption{Traces ruled out by model $\mathsf{M_1}$.}
+\caption{Traces ruled out by each constraint of model $M_1$.}%$\mathsf{M_1}$.}
 \end{table}
 %
-Notably, the model is able to discriminate between positive and negative examples except for three negative traces (two paths), that cannot be ruled out without discarding also some positive examples.
+Notably, as shown in Table 1, this model is able to discriminate between positive and negative examples except for three negative traces (two variants), that cannot be ruled out without discarding also some positive examples.
 
-We continued our investigation by focusing on the very beginning of the process, and on the specific activity \textsf{Initial Rejection}. Many models were found, among them the following one:
+We continued our investigation by focusing on %the very beginning of the process, and on the specific 
+activity \textsf{Initial Rejection}. \btext{We report here one of the returned models:} %Many models were found, among them the following one:
 
 \begin{align*}
-\mathsf{M_2} = \{ \ &  \mathsf{ absence2(Initial\ rejection)} \\
+%\mathsf{M_2} = \{ \ &  \mathsf{ absence2(Initial\ rejection)} \\
+M_2 = \{ \ &  \mathsf{ absence2(Initial\ rejection)} \\
 & \mathsf{ choice(Round\ Ends, Applicant\ informed)} \\
 & \mathsf{ notchainsuccession(Set\ to\ Pre\ approved, Round\ Ends)} \\
 & \mathsf{ notchainsuccession(Receive\ final\ report, First\ payout)} \\
@@ -99,7 +108,8 @@ We continued our investigation by focusing on the very beginning of the process,
 & \mathsf{ response(Undo\ payment, First\ payout) } \ \} 
 \end{align*}
 
-Model $\mathsf{M_2}$ highlights the fact that some negative traces can be distinguishable from the positive ones because of the repetition of the \textsf{Initial Rejection}: indeed, some traces reported the execution of the activity twice, thus indicating an attention point for the process manager.
+Model $M_2$ %$\mathsf{M_2}$
+highlights the fact that some negative traces can be distinguishable from the positive ones because of the repetition of \textsf{Initial Rejection}: some traces, indeed, reported the execution of the activity twice, thus indicating an attention point for the process analyst.
 
 %%%Model M2:\\
 %%%
@@ -133,24 +143,30 @@ Model $\mathsf{M_2}$ highlights the fact that some negative traces can be distin
 \subsection{Evaluation on the CERV log}
 \label{subsec:cerv}
 
-CERV is an event log that describes the process of cervical cancer screening in an Italian screening center, and it has been used in previous related works \cite{2007b-Lamma,deviant-tkde}. The screening program is composed of five phases, organized sequentially: screening planning, invitation management, first level test with pap-test, second level test with colposcopy (only if the first test is positive), and eventually biopsy (if the second test gives a positive response). Several subjects do not respect the planned protocol: e.g., subjects do not show up at the first test, even if they chose the temporal slot themselves. Moreover, a number of subjects prefer to consult physicians they trust more, in case of a positive response. As it commonly happens in socio-technical systems, a great variety of process instances appears in the log, nott all the instances being compliant with the protocol.
+CERV is an event log that describes a process pertaining to the cervical cancer screening in an Italian screening center, and it has been used in previous works \cite{2007b-Lamma,deviant-tkde}. The screening program is composed of five phases, organized sequentially: screening planning, invitation management, first level test with pap-test, second level test with colposcopy (only if the first test is positive), and eventually biopsy (if the second test gives a positive response). Several subjects do not respect the planned protocol: e.g., subjects might not show up at the first test, even if they have chosen a time slot. Moreover, a number of subjects prefer to consult physicians they trust more, in case of a positive response. As it commonly happens in socio-technical systems, a large variety of process instances appear in the log, not all them being compliant with the protocol.
 %
-Hence, the traces have been labeled by a domain expert as belonging either to the positive or the negative set, depending on their compliance to the adopted protocol.
+Hence, the traces have been labeled by a domain expert as belonging either to the positive or the negative set, depending on their compliance with the adopted protocol.
 
-We investigated the log by eliciting a preference over the \textsf{precedence} and \textsf{succession} templates. The first resulting models, respectively, are as follows:
+We investigated the log by eliciting a preference over the \textsf{precedence} and \textsf{succession} templates. The first two returned models are:
 
 \begin{align*}
-\mathsf{M_1} = \{ \ &  \mathsf{ alternateresponse(send\ positive\ pap\ test\ result, take\ a\ colposcopy\ examination)} \\
+%\mathsf{M_1} = \{ \ &  \mathsf{ alternateresponse(send\ positive\ pap\ test\ result, take\ a\ colposcopy\ examination)} \\
+M_1 = \{ \ &  \mathsf{ alternateresponse(send\ positive\ pap\ test\ result, take\ a\ colposcopy\ examination)} \\
 & \mathsf{ chainprecedence(invite, take\ a\ pap\ test\ examination)} \\
 & \mathsf{ exclusivechoice(send\ pap\ test\ sample, reject)} \\
-& \mathsf{precedence(send\ colposcopy\ uncertain\ result, send\ biopsy\ sample)} \ \}  \\
-\mathsf{M_2} = \{ \ &  \mathsf{ alternateresponse(send\ positive\ pap\ test\ result, take\ a\ colposcopy\ examination)} \\
+& \mathsf{precedence(send\ colposcopy\ uncertain\ result, send\ biopsy\ sample)} \ \}  \\ \\
+%\mathsf{M_2} = \{ \ &  \mathsf{ alternateresponse(send\ positive\ pap\ test\ result, take\ a\ colposcopy\ examination)} \\
+M_2 = \{ \ &  \mathsf{ alternateresponse(send\ positive\ pap\ test\ result, take\ a\ colposcopy\ examination)} \\
 & \mathsf{ chainprecedence(invite, take\ a\ pap\ test\ examination)} \\
 & \mathsf{ exclusivechoice(send\ pap\ test\ sample, reject)} \\
 & \mathsf{succession(send\ colposcopy\ uncertain\ result, send\ biopsy\ sample)} \ \}  
 \end{align*}
 
-In the first model, the \textsf{precedence} constraint implies that if a biopsy is executed, then the colposcopy examination would have provided an uncertain result before. Surprisingly, the second model is identical to the first one, except for the constraint subjected to our preference. Interestingly, the \textsf{succession} is about the same activities involved by the \textsf{precedence} constraint in the first model. A further observation lies in the logical relation between \textsf{precedence} and \textsf{succession}: a trace that violates the former will always violate the latter (but not the opposite). It is up to the domain expert to prefer a stricter or a more general constraint.
+In model $M_1$, the \textsf{precedence} constraint implies that if a biopsy is executed, then the colposcopy examination has provided an uncertain result before. The second model is identical to the first one, except for the constraint \btext{related} %subjected
+to our preference. Interestingly, the \textsf{succession} \btext{relates} %is about
+the same activities involved \btext{in} %by
+the \textsf{precedence} constraint in the first model. The difference between the two models lies in the logical relation between \textsf{precedence} and \textsf{succession}: a trace that violates the former will always violate the latter (but not \btext{vice versa}% the opposite
+). It is then up to the domain expert to prefer a stricter or a more general behavior.
 %, knowing that in this case such a choice would not affect the resulting model.
 
 %%%For the models of the previous example we report the number of traces and paths violated by each constraint:
