--- a/main.tex
+++ b/main.tex
@@ -33,6 +33,7 @@
 \usepackage{xcolor,colortbl}
 \usepackage{booktabs}
 \usepackage[nolist]{acronym}
+
 %\usepackage{newtxtext}
 
 
@@ -48,13 +49,26 @@
 \newcommand\lb{\textsl{LB meta-model}\xspace}
 
 
-\newcommand\btext[1]{{\color{blue}{#1}}}
+\newcommand\btext[1]{{\color{black}{#1}}}
 
 \newcommand{\sheriff}{sheriffs}
 \newcommand{\asprin}{\emph{ASPrin}\xspace}
 
+\begin{acronym}[PUB/SUB]
+    \acro{AFA}{Alternating Finite Automata}
+    \acro{ASP}{Answer Set Programming}
+    \acro{BPM}{Business Process Management}
+    \acro{DAG}{Directed Acyclic Graphs}
+    \acro{DPML}{Declarative Process Model Learner}
+    \acro{ICL}{Inductive Constraint Logic}
+    \acro{ILP}{Inductive Logic Programming}
+    \acro{LTL}{Linear Temporal Logic}
+    \acro{XES}{eXtensible Event Stream}
+\end{acronym}
 
+\linespread{0.985}
 
+\input{declare-macros}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 %
@@ -68,7 +82,7 @@
 % an abbreviated paper title here
 %
 
-\author{Federico Chesani\inst{1}, Chiara Di Francescomarino\inst{2}, Chiara Ghidini\inst{2}, Giulia Grundler\inst{1}, Daniela Loreti\inst{1}, Fabrizio Maria Maggi\inst{3}, Paola Mello\inst{1}, Marco Montali\inst{3}, Sergio Tessaris\inst{3}}
+\author{Federico Chesani\inst{1}, Chiara Di Francescomarino\inst{2}, Chiara Ghidini\inst{2}, \\Giulia Grundler\inst{1}, Daniela Loreti\inst{1}, Fabrizio Maria Maggi\inst{3}, Paola Mello\inst{1}, \\Marco Montali\inst{3}, Sergio Tessaris\inst{3}}
 
 %\author{First Author\inst{1}\orcidID{0000-1111-2222-3333} \and
 %Second Author\inst{2,3}\orcidID{1111-2222-3333-4444} \and
@@ -81,24 +95,20 @@
 \institute{DISI - University of Bologna, Italy \and
 Fondazione Bruno Kessler, Trento, Italy \and
 Free University of Bozen/Bolzano, Italy\\
-\email{federico.chesani@unibo.it}}
+%\email{federico.chesani@unibo.it}
+}
 %
 \maketitle              % typeset the header of the contribution
 %
 \begin{abstract}
 % ADD ABSTRACT\tododl{page limit: 16pp}
 
-Process Discovery techniques focus on learning a process model starting from a given set of logged traces. The majority of the approaches consider only one set of examples to learn from, i.e. the log itself. Some recent works instead advocated the usefulness of taking into account two different sets of traces (aka positive and negative examples), with the goal of learning a process model that \btext{is able}%allows
- to discriminate which trace belongs to which set.
-
+Process discovery techniques focus on learning a process model starting from a given set of logged traces. The majority of the discovery approaches, however, only consider one set of examples to learn from, i.e., the log itself. Some recent works on declarative process discovery, instead, advocated the usefulness of taking into account two different sets of traces (a.k.a.\ positive and negative examples), with the goal of learning a set of constraints that is able to discriminate which trace belongs to which set.
 %When discovering declarative process models, the aim also becomes to provide an insight/explanation of which are the differences for which a trace would be classified as belonging to one set or another. Sometimes, however, too many models might be available, thus nullifying the discovery effort. Some preference criteria would be helpful to guide the discovery process towards a model among the many.
-
-When discovering declarative process models, the aim also becomes to provide an insight/explanation of which are the differences between the two sets. Sometimes, however, too many models might be available, thus nullifying the discovery effort. Some preference criteria would be helpful to guide the discovery process towards a model among the many. 
-
+%When discovering declarative process models, the aim also becomes to provide an insight/explanation of which are the differences between the two sets. 
+Sometimes, however, too many possible sets of constraints might be available, thus nullifying the discovery effort. Therefore, some preference criteria would be helpful to guide the discovery process towards a set of constraints among the many. 
 %In this work we leverage our previous approach to provide the possibility, from the user viewpoint, of specifying preferences over trace activities and Declare templates. Such preferences are used to guide the discovery process, so that the output model will include, if possible, the preferred constraints. The user, through the preferences, instructs the discovery algorithm for looking for certain models: in other terms, some user knowledge on the desired outcome is exploited in the discovery process.
-
-In this work we leverage our previous approach to provide the possibility, from the user viewpoint, of specifying preferences \btext{on}%over
- trace activities and Declare templates. Such preferences are used to guide the discovery process, so that the output model will include, if possible, the preferred constraints. In other terms, some user knowledge about the desired outcome is exploited in the discovery process. To implement such a process, we exploit a logic-based framework that provides a sound and formal meaning to the notion of user preferences.
+In this work, we present an approach for the discovery of declarative models providing the possibility, from the user viewpoint, of specifying preferences on activities and constraint templates to be used to build the final set of constraints. Such preferences are used to guide the discovery process, so that the output set will include, if possible, the preferred constraints, thus exploiting some user knowledge about the desired outcome. The approach is grounded in a logic-based framework that provides a sound and formal meaning to the notion of user preferences.
 
 \keywords{Process mining \and process discovery \and declarative process models \and deviant traces.}
 \end{abstract}
@@ -143,16 +153,6 @@ In this work we leverage our previous approach to provide the possibility, from 
  \bibliography{deviant}
 %
 
-\begin{acronym}[PUB/SUB]
-    \acro{AFA}{Alternating Finite Automata}
-    \acro{ASP}{Answer Set Programming}
-    \acro{BPM}{Business Process Management}
-    \acro{DAG}{Directed Acyclic Graphs}
-    \acro{DPML}{Declarative Process Model Learner}
-    \acro{ICL}{Inductive Constraint Logic}
-    \acro{ILP}{Inductive Logic Programming}
-    \acro{LTL}{Linear Temporal Logic}
-    \acro{XES}{eXtensible Event Stream}
-\end{acronym}
+
 
 \end{document}
